@@ -1,5 +1,7 @@
 package org.openhab.io.homekit.library.characteristic;
 
+import java.util.Set;
+
 import javax.json.JsonValue;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -12,34 +14,68 @@ import org.openhab.io.homekit.api.service.HomekitService;
 import org.openhab.io.homekit.core.characteristic.HomekitFloatCharacteristic;
 import org.openhab.io.homekit.event.manager.HomekitEventManager;
 
+/**
+ * HomeKit Brightness Characteristic.
+ * <p>
+ * This characteristic represents the brightness level of a device, expressed as a percentage from 0 to 100. The value is a floating-point number and is used for dimmable lights and similar accessories.
+ * <p>
+ * See the HomeKit Accessory Protocol (HAP) specification for details: https://developer.apple.com/documentation/HomeKit
+ *
+ * @author Karel Goderis
+ */
 @HomekitCharacteristicType(type = "00000008-0000-1000-8000-0026BB765291", name = "Brightness", tag = "brightness")
 @NonNullByDefault
 public class HomekitBrightnessCharacteristic extends HomekitFloatCharacteristic {
 
+    /**
+     * Constructs a new Brightness characteristic.
+     *
+     * @param service the HomeKit service this characteristic belongs to
+     * @param eventManager the event manager for handling HomeKit events
+     * @param instanceId the instance ID for this characteristic
+     */
     public HomekitBrightnessCharacteristic(HomekitService service, HomekitEventManager eventManager, long instanceId) {
-        super(service, eventManager, 0.0, 100.0, 1.0, "%");
+        super(service, eventManager, 0.0, 100.0, 1.0, "percentage");
         withInstanceId(instanceId).withPairedWrite(true).withPairedRead(true).withEvents(true)
             .withDescription("Brightness");
     }
 
+    /**
+     * Constructs a new Brightness characteristic from a JSON value.
+     *
+     * @param service the HomeKit service this characteristic belongs to
+     * @param eventManager the event manager for handling HomeKit events
+     * @param value the JSON value to initialize the characteristic with
+     */
     public HomekitBrightnessCharacteristic(HomekitService service, HomekitEventManager eventManager, JsonValue value) {
         super(service, eventManager, value);
     }
 
+    /**
+     * Checks if the given value is an allowed brightness value.
+     *
+     * @param value the value to check
+     * @return true if the value is allowed, false otherwise
+     */
     @Override
     public boolean isAllowedValue(Double value) {
         return value != null && value >= 0.0 && value <= 100.0;
     }
 
+    /**
+     * Returns the set of allowed brightness values (empty set for continuous range).
+     *
+     * @return the set of allowed values
+     */
     @Override
-    public java.util.Set<Double> getAllowedValues() {
-        return java.util.Collections.emptySet();
+    public Set<Double> getAllowedValues() {
+        return Set.of();
     }
 
     @Override
     public Double toValue(State state) {
-        if (state instanceof HSBType) {
-            PercentType brightness = ((HSBType) state).getBrightness();
+        if (state instanceof HSBType hSBType) {
+            PercentType brightness = hSBType.getBrightness();
             return brightness.doubleValue();
         } else {
             DecimalType convertedState = state.as(DecimalType.class);
