@@ -1,29 +1,38 @@
 package org.openhab.io.homekit.library.characteristic;
 
-import javax.json.JsonObject;
 import javax.json.JsonValue;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.core.types.State;
 import org.openhab.io.homekit.api.characteristic.HomekitCharacteristicType;
 import org.openhab.io.homekit.api.service.HomekitService;
 import org.openhab.io.homekit.core.characteristic.HomekitIntegerCharacteristic;
 import org.openhab.io.homekit.event.manager.HomekitEventManager;
 
+import java.util.Set;
+
 /**
  * HomeKit Current Horizontal Tilt Angle Characteristic.
- * This characteristic represents the current horizontal tilt angle for a device (e.g., window covering).
+ * <p>
+ * This characteristic represents the current horizontal tilt angle for a device (e.g., window covering), measured in arcdegrees. The value indicates the current position of the horizontal slats. See the HAP specification for valid value range and usage.
+ * <p>
+ * See the HomeKit Accessory Protocol (HAP) specification for details: https://developer.apple.com/documentation/HomeKit
  *
- * @see <a href="https://developers.homebridge.io/#/characteristic/CurrentHorizontalTiltAngle">HomeKit Documentation</a>
+ * @author Karel Goderis
  */
 @HomekitCharacteristicType(type = "0000006C-0000-1000-8000-0026BB765291", name = "Current Horizontal Tilt Angle", tag = "currentHorizontalTiltAngle")
 @NonNullByDefault
 public class HomekitCurrentHorizontalTiltAngleCharacteristic extends HomekitIntegerCharacteristic {
 
+    /**
+     * Constructs a new Current Horizontal Tilt Angle characteristic.
+     *
+     * @param service the HomeKit service this characteristic belongs to
+     * @param eventManager the event manager for handling HomeKit events
+     * @param instanceId the instance ID for this characteristic
+     */
     public HomekitCurrentHorizontalTiltAngleCharacteristic(HomekitService service, HomekitEventManager eventManager,
             long instanceId) {
-        super(service, eventManager, -90, 90, "°");
+        super(service, eventManager, -90, 90, "arcdegrees");
         withInstanceId(instanceId)
             .withPairedWrite(false)
             .withPairedRead(true)
@@ -31,54 +40,36 @@ public class HomekitCurrentHorizontalTiltAngleCharacteristic extends HomekitInte
             .withDescription("Current Horizontal Tilt Angle");
     }
 
+    /**
+     * Constructs a new Current Horizontal Tilt Angle characteristic from a JSON value.
+     *
+     * @param service the HomeKit service this characteristic belongs to
+     * @param eventManager the event manager for handling HomeKit events
+     * @param value the JSON value to initialize the characteristic with
+     */
     public HomekitCurrentHorizontalTiltAngleCharacteristic(HomekitService service, HomekitEventManager eventManager,
             JsonValue value) {
         super(service, eventManager, value);
     }
 
-    @Override
-    public JsonObject toEventJson(Integer value) {
-        return super.toEventJson(value);
-    }
-
-    @Override
-    public JsonObject toEventJson() {
-        return super.toEventJson();
-    }
-
-    @Override
-    public JsonValue toValueJson(@Nullable Integer value) {
-        return super.toValueJson(value);
-    }
-
-    @Override
-    public JsonObject toJson() {
-        return super.toJson();
-    }
-
-    @Override
-    public JsonObject toJson(boolean includeMeta, boolean includePermissions, boolean includeType,
-            boolean includeEvent) {
-        return super.toJson(includeMeta, includePermissions, includeType, includeEvent);
-    }
-
-    @Override
-    public JsonObject toReducedJson() {
-        return super.toReducedJson();
-    }
-
-    @Override
-    public State toState(Integer value) {
-        return super.toState(value);
-    }
-
+    /**
+     * Checks if the given value is an allowed horizontal tilt angle.
+     *
+     * @param value the value to check
+     * @return true if the value is allowed, false otherwise
+     */
     @Override
     public boolean isAllowedValue(Integer value) {
         return value != null && value >= -90 && value <= 90;
     }
 
+    /**
+     * Returns the set of allowed horizontal tilt angle values (empty set for continuous range).
+     *
+     * @return the set of allowed values
+     */
     @Override
-    public java.util.Set<Integer> getAllowedValues() {
-        return java.util.Collections.emptySet();
+    public Set<Integer> getAllowedValues() {
+        return Set.of();
     }
 }
